@@ -21,9 +21,12 @@
 
 package io.crate.expression.scalar.string;
 
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.net.MalformedURLException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -31,8 +34,6 @@ import java.util.Locale;
 import java.util.Map;
 
 import org.elasticsearch.common.Strings;
-
-import java.nio.charset.StandardCharsets;
 
 import io.crate.data.Input;
 import io.crate.expression.scalar.ScalarFunctionModule;
@@ -58,22 +59,8 @@ public final class ParseURLFunction extends Scalar<Object, String> {
         );
     }
 
-    private final Signature signature;
-    private final BoundSignature boundSignature;
-
     public ParseURLFunction(Signature signature, BoundSignature boundSignature) {
-        this.signature = signature;
-        this.boundSignature = boundSignature;
-    }
-
-    @Override
-    public Signature signature() {
-        return signature;
-    }
-
-    @Override
-    public BoundSignature boundSignature() {
-        return boundSignature;
+        super(signature, boundSignature);
     }
 
     @Override
@@ -92,8 +79,8 @@ public final class ParseURLFunction extends Scalar<Object, String> {
         URL url = null;
 
         try {
-            url = new URL(urlText);
-        } catch (MalformedURLException e1) {
+            url = URL.of(new URI(urlText), null);
+        } catch (MalformedURLException | URISyntaxException e1) {
             throw new IllegalArgumentException(String.format(Locale.ENGLISH,
                                                             "unable to parse url %s",
                                                              urlText));
