@@ -31,9 +31,11 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
@@ -81,14 +83,14 @@ public class OrderedLuceneBatchIteratorFactoryTest extends ESTestCase {
         RamAccounting.NO_ACCOUNTING
     );
 
-    private String columnName = "x";
-    private Reference reference = createReference(columnName, DataTypes.LONG);
+    private final String columnName = "x";
+    private final Reference reference = createReference(columnName, DataTypes.LONG);
     private IndexSearcher searcher1;
     private IndexSearcher searcher2;
     private OrderBy orderBy;
     private List<Object[]> expectedResult;
-    private boolean[] reverseFlags = new boolean[]{true};
-    private boolean[] nullsFirst = new boolean[]{true};
+    private final boolean[] reverseFlags = new boolean[]{true};
+    private final boolean[] nullsFirst = new boolean[]{true};
 
     @Mock
     public RowAccounting<Row> rowAccounting;
@@ -129,7 +131,7 @@ public class OrderedLuceneBatchIteratorFactoryTest extends ESTestCase {
 
     @Test
     public void testOrderedLuceneBatchIterator() throws Exception {
-        BatchIteratorTester tester = new BatchIteratorTester(
+        var tester = BatchIteratorTester.forRows(
             () -> {
                 LuceneOrderedDocCollector collector1 = createOrderedCollector(searcher1, 1);
                 LuceneOrderedDocCollector collector2 = createOrderedCollector(searcher2, 2);
@@ -153,7 +155,7 @@ public class OrderedLuceneBatchIteratorFactoryTest extends ESTestCase {
             .when(rowAccounting).accountForAndMaybeBreak(any(Row.class));
 
         BatchIterator<Row> rowBatchIterator = OrderedLuceneBatchIteratorFactory.newInstance(
-            Arrays.asList(createOrderedCollector(searcher1, 1)),
+            List.of(createOrderedCollector(searcher1, 1)),
             OrderingByPosition.rowOrdering(List.of(DataTypes.INTEGER), new int[]{0}, reverseFlags, nullsFirst),
             rowAccounting,
             Runnable::run,
@@ -223,7 +225,7 @@ public class OrderedLuceneBatchIteratorFactoryTest extends ESTestCase {
 
         rowBatchIterator.kill(new InterruptedException("killed"));
 
-        assertThatThrownBy(() -> consumer.getResult())
+        assertThatThrownBy(consumer::getResult)
             .isExactlyInstanceOf(InterruptedException.class);
     }
 
@@ -232,13 +234,13 @@ public class OrderedLuceneBatchIteratorFactoryTest extends ESTestCase {
         TestingRowConsumer consumer = new TestingRowConsumer();
         consumer.accept(rowBatchIterator, null);
 
-        assertThatThrownBy(() -> consumer.getResult())
+        assertThatThrownBy(consumer::getResult)
             .isExactlyInstanceOf(exception.getClass())
             .hasMessage(exception.getMessage());
     }
 
     private LuceneOrderedDocCollector createOrderedCollector(IndexSearcher searcher, int shardId) {
-        CollectorContext collectorContext = new CollectorContext();
+        CollectorContext collectorContext = new CollectorContext(Set.of(), Function.identity());
         List<LuceneCollectorExpression<?>> expressions = Collections.singletonList(
             new OrderByCollectorExpression(reference, orderBy, o -> o));
         return new LuceneOrderedDocCollector(
